# myvocab

./: .env.example  .gitignore  README.md  myvocab.py  myvocab.spec  pyproject.toml
doc/instructions/: 2 Settings приложения.txt  3 Справочные данные приложения.txt  4 Правила преобразования в singular.txt  6 Пример корректировки преобразования.txt
src/myvocab/constants/: constants.py
src/myvocab/exceptions/: exceptions.py
src/myvocab/parsing/commands/: diff_two_files.py  get_file_unique_lines.py  get_infinit.py  get_init_data.py  get_singular.py  get_v_tuple.py  get_verbs_s.py  load_settings.py  save_file.py  skip_current_dir.py  write_all_patches.py  write_directories.py  write_settings.py
src/myvocab/parsing/infinitive/: infinitive.py
src/myvocab/parsing/singularization/: singularization.py
src/myvocab/parsing/vocabulary/: vocabulary.py
src/myvocab/processing/: processor.py
src/myvocab/translation/: fetch_translate.py  translator.py
src/myvocab/translation/translation_yandex/: fetch_translate.py  supported_languages.py
src/myvocab/utils/dir_handler/: get_dir_size.py
src/myvocab/utils/fetche_handler/: fetcher.py
src/myvocab/utils/input_handler/: input_yes_no.py
src/myvocab/utils/logging_handler/: handle_uncaught_exception.py  set_file_handler.py  (+1 more)
src/myvocab/validators/: validators.py
tests/instructions/: 1 Запуск приложения.txt  2 Settings приложения.txt  3 Справочные данные приложения.txt  4 Правила преобразования в singular.txt  5 Правила преобразования в infinitive.txt  6 Пример корректировки преобразования.txt  README.md
(+18 files in other folders)
